# Numerical-Optimization

./: CMakeLists.txt
include/: Timer.hpp
src/: homework1_Newton_method.cpp  homework1_steepest_gradient.cpp
